--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 #
 # This file is part of Invenio.
-# Copyright (C) 2015 CERN.
+# Copyright (C) 2015, 2016 CERN.
 #
 # Invenio is free software; you can redistribute it
 # and/or modify it under the terms of the GNU General Public License as
@@ -22,19 +22,15 @@
 # waive the privileges and immunities granted to it by virtue of its status
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
 
-
-# Check manifest will not automatically add these two files:
-include .dockerignore
-include .editorconfig
-include .tx/config
-
-# added by check_manifest.py
 include *.md
 include *.rst
 include *.sh
 include *.txt
-include LICENSE
+include .dockerignore
+include .editorconfig
+include .tx/config
 include babel.ini
+include LICENSE
 include pytest.ini
 recursive-include docs *.bat
 recursive-include docs *.py
