--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,9 @@ python:
 before_install:
   - "travis_retry pip install --upgrade pip setuptools py"
   - "travis_retry pip install twine wheel coveralls requirements-builder"
-  - "requirements-builder --level=min setup.py > .travis-lowest-requirements.txt"
-  - "requirements-builder --level=pypi setup.py > .travis-release-requirements.txt"
-  - "requirements-builder --level=dev --req requirements-devel.txt setup.py > .travis-devel-requirements.txt"
+  - "requirements-builder --level=min -e all setup.py > .travis-lowest-requirements.txt"
+  - "requirements-builder --level=pypi -e all setup.py > .travis-release-requirements.txt"
+  - "requirements-builder --level=dev -e all --req requirements-devel.txt setup.py > .travis-devel-requirements.txt"
 
 install:
   - "travis_retry pip install -r .travis-${REQUIREMENTS}-requirements.txt"
