global: release checklist
* FIX Adds changes according to release preparation checklist.

Signed-off-by: Paulina Lach <paulina.malgorzata.lach@cern.ch>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -28,18 +28,18 @@ include *.sh
 include *.txt
 include .dockerignore
 include .editorconfig
-include .tx/config
-include babel.ini
-include docs/requirements.txt
 include .lgtm
 include LICENSE
 include MAINTAINERS
+include docs/requirements.txt
 include pytest.ini
+prune docs/_build
 recursive-include docs *.bat
 recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs Makefile
 recursive-include examples *.py
+recursive-include examples *.sh
 recursive-include invenio_logging *.html
 recursive-include misc *.py
 recursive-include misc *.rst
