--- a/pytest.ini
+++ b/pytest.ini
@@ -23,4 +23,5 @@
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
 
 [pytest]
-addopts = --pep8 --ignore=docs --cov=invenio_logging --cov-report=term-missing
+pep8ignore = docs/conf.py ALL
+ddopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing docs tests invenio_logging
