pytest: filterwarning run-tests: isort rules *.py: import sorting

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,3 +9,4 @@
 [pytest]
 pep8ignore = docs/conf.py ALL
 ddopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing docs tests invenio_logging
+filterwarnings = ignore::pytest.PytestDeprecationWarning
