--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,6 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 
 [pytest]
-pep8ignore = docs/conf.py ALL
-ddopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing docs tests invenio_logging
+addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing tests invenio_logging
 filterwarnings = ignore::pytest.PytestDeprecationWarning
+testpaths = tests invenio_logging
