--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,6 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 
 [pytest]
-addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing tests invenio_logging
+addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing
 filterwarnings = ignore::pytest.PytestDeprecationWarning
 testpaths = tests invenio_logging
