--- a/setup.cfg
+++ b/setup.cfg
@@ -2,12 +2,58 @@
 #
 # This file is part of Invenio.
 # Copyright (C) 2015-2018 CERN.
+# Copyright (C) 2022 Graz University of Technology.
 #
 # Invenio is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
 
-[aliases]
-test = pytest
+[metadata]
+name = invenio-logging
+version = attr: invenio_logging.__version__
+description = "Module providing logging capabilities."
+long_description = file: README.rst, CHANGES.rst
+keywords = invenio logging
+license = MIT
+author = CERN
+author_email = info@inveniosoftware.org
+platforms = any
+url = https://github.com/inveniosoftware/invenio-logging
+classifiers =
+    Development Status :: 5 - Production/Stable
+
+[options]
+include_package_data = True
+packages = find:
+python_requires = >=3.6
+zip_safe = False
+install_requires =
+    invenio-celery>=1.2.4
+    invenio-db>=1.0.12
+
+[options.extras_require]
+tests =
+    flask-login>=0.3.2,<0.5.0
+    httpretty>=0.8.14
+    mock>=1.3.0
+    pytest-invenio>=1.4.2
+    iniconfig>=1.1.1
+    Sphinx>=1.5.1
+    raven[flask]>=6
+    sentry-sdk[flask]>=1.0.0
+# Kept for backwards compatibility
+docs =
+sentry =
+sentry-sdk =
+
+[options.entry_points]
+invenio_base.apps =
+    invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
+    invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
+    invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry
+invenio_base.api_apps =
+    invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
+    invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
+    invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry
 
 [build_sphinx]
 source-dir = docs/
