--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ tests =
     mock>=1.3.0
     pytest-invenio>=1.4.2
     iniconfig>=1.1.1
-    Sphinx>=1.5.1
+    sphinx>=4.5
     raven[flask]>=6
     sentry-sdk[flask]>=1.0.0
 # Kept for backwards compatibility
