--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
 
 [options.extras_require]
 tests =
+    pytest-black>=0.3.0,<0.3.10
     flask-login>=0.3.2,<0.5.0
     httpretty>=0.8.14
     mock>=1.3.0
@@ -62,3 +63,11 @@ all_files = 1
 
 [bdist_wheel]
 universal = 1
+
+[isort]
+profile=black
+
+[tool:pytest]
+addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing tests invenio_logging
+filterwarnings = ignore::pytest.PytestDeprecationWarning
+testpaths = tests invenio_logging
