--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -26,3 +26,4 @@ recursive-include invenio_logging *.html
 recursive-include misc *.py
 recursive-include misc *.rst
 recursive-include tests *.py
+include .git-blame-ignore-revs
