move check_manifest configuration to setup.cfg.
concentrate the configuration of all calls in one place

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,10 @@ universal = 1
 [isort]
 profile=black
 
+[check-manifest]
+ignore =
+    *-requirements.txt
+
 [tool:pytest]
 addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_logging --cov-report=term-missing tests invenio_logging
 filterwarnings = ignore::pytest.PytestDeprecationWarning
