--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
 [options.extras_require]
 tests =
     pytest-black>=0.3.0,<0.3.10
-    flask-login>=0.3.2,<0.5.0
+    flask-login>=0.6.1
     httpretty>=0.8.14
     mock>=1.3.0
     pytest-invenio>=1.4.2
