setup: add back sentry and sentry-sdk

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,9 @@ tests =
 # Kept for backwards compatibility
 docs =
 sentry =
+    raven[flask]>=6
 sentry-sdk =
+    sentry-sdk[flask]>=1.0.0
 
 [options.entry_points]
 invenio_base.apps =
