global: remove support for raven

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,13 +39,9 @@ tests =
     pytest-invenio>=1.4.2
     iniconfig>=1.1.1
     sphinx>=4.5
-    raven[flask]>=6
     sentry-sdk[flask]>=1.0.0
 # Kept for backwards compatibility
-docs =
-sentry =
-    raven[flask]>=6
-sentry-sdk =
+sentry_sdk =
     sentry-sdk[flask]>=1.0.0
 
 [options.entry_points]
