installation: upper pin Sentry-SDK
* Upper pin Sentry-SDK to <2.0.0, until breaking changes have been
  addressed throughout the Invenio codebase.

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,9 +39,10 @@ tests =
     pytest-invenio>=1.4.2
     iniconfig>=1.1.1
     sphinx>=4.5
-    sentry-sdk[flask]>=1.0.0
+    # Sentry-SDK v2.x has breaking changes (see https://github.com/inveniosoftware/invenio-logging/issues/73)
+    sentry-sdk[flask]>=1.0.0,<2.0.0
 sentry_sdk =
-    sentry-sdk[flask]>=1.0.0
+    sentry-sdk[flask]>=1.0.0,<2.0.0
 
 [options.entry_points]
 invenio_base.apps =
