--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ zip_safe = False
 install_requires =
     invenio-celery>=1.2.4
     invenio-db>=1.0.12
+    structlog>=24.2.0
 
 [options.extras_require]
 tests =
