setup: pin dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 #
 # This file is part of Invenio.
 # Copyright (C) 2015-2024 CERN.
-# Copyright (C) 2022 Graz University of Technology.
+# Copyright (C) 2022-2024 Graz University of Technology.
 #
 # Invenio is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
@@ -27,16 +27,16 @@ packages = find:
 python_requires = >=3.8
 zip_safe = False
 install_requires =
-    invenio-celery>=1.2.4
-    invenio-db>=1.0.12
+    invenio-celery>=1.2.4,<2.0.0
+    invenio-db>=1.0.12,<2.0.0
 
 [options.extras_require]
 tests =
-    pytest-black>=0.3.0,<0.3.10
+    pytest-black-ng>=0.4.0
     flask-login>=0.6.1
     httpretty>=0.8.14
     mock>=1.3.0
-    pytest-invenio>=1.4.2
+    pytest-invenio>=1.4.2,<3.0.0
     iniconfig>=1.1.1
     sphinx>=4.5
     # Sentry-SDK v2.x has breaking changes (see https://github.com/inveniosoftware/invenio-logging/issues/73)
