setup: change sentry_sdk to sentry
* sentry_sdk could make problem, sentry-sdk too. last release had to be
  yanked because of that problem. changing to sentry only should fix it

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ tests =
     sphinx>=4.5
     # Sentry-SDK v2.x has breaking changes (see https://github.com/inveniosoftware/invenio-logging/issues/73)
     sentry-sdk[flask]>=1.0.0,<2.0.0
-sentry_sdk =
+sentry =
     sentry-sdk[flask]>=1.0.0,<2.0.0
 
 [options.entry_points]
