feat: add datastream logging support to invenio-logging
* Introduced `LogManager` to handle structured logging via registered builders.
* Added `SearchBackend` to store logs in a search engine (OpenSearch/Elasticsearch).
* Implemented `LogEvent` for structured log representation.
* Enabled dynamic log builder registration via entry points.
* Integrated Celery task (`log_event_task`) to handle asynchronous log ingestion.
* Ensured template validation in the search engine before indexing logs.
* Configurable log types to support audit, job and others.
* closes https://github.com/CERNDocumentServer/cds-rdm/issues/361

Co-authored-by: Saksham Arora <sakshamarora1001@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -23,6 +23,7 @@ recursive-include docs Makefile
 recursive-include examples *.py
 recursive-include examples *.sh
 recursive-include invenio_logging *.html
+recursive-include invenio_logging *.json
 recursive-include misc *.py
 recursive-include misc *.rst
 recursive-include tests *.py
