--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,8 @@ zip_safe = False
 install_requires =
     invenio-celery>=2.0.0,<3.0.0
     invenio-db>=2.0.0,<3.0.0
+    invenio-search>=3.0.0,<4.0.0
+    marshmallow~=3.0
 
 [options.extras_require]
 tests =
@@ -43,16 +45,28 @@ tests =
     sentry-sdk[flask]>=1.0.0,<2.0.0
 sentry =
     sentry-sdk[flask]>=1.0.0,<2.0.0
+elasticsearch7 =
+    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
+opensearch1 =
+    invenio-search[opensearch1]>=3.0.0,<4.0.0
+opensearch2 =
+    invenio-search[opensearch2]>=3.0.0,<4.0.0
 
 [options.entry_points]
 invenio_base.apps =
     invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
     invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
     invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry
+    invenio_logging_datastream = invenio_logging.datastream:InvenioLoggingDatastreams
 invenio_base.api_apps =
     invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
     invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
     invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry
+    invenio_logging_datastream = invenio_logging.datastream:InvenioLoggingDatastreams
+invenio_search.index_templates =
+    invenio_logging_datastream = invenio_logging.datastreams.templates
+invenio_logging.datastreams.builders =
+    audit = invenio_logging.datastreams.audit_logs:AuditLogBuilder
 
 [build_sphinx]
 source-dir = docs/
