installation: fix project description

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@
 [metadata]
 name = invenio-logging
 version = attr: invenio_logging.__version__
-description = "Module providing logging capabilities."
+description = Module providing logging capabilities.
 long_description = file: README.rst, CHANGES.rst
 keywords = invenio logging
 license = MIT
