datastreams: add component template
* minor improvements

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,8 @@ invenio_search.index_templates =
     invenio_logging_datastream = invenio_logging.datastreams.templates
 invenio_logging.datastreams.builders =
     audit = invenio_logging.datastreams.audit_logs:AuditLogBuilder
+invenio_search.component_templates =
+    logging = invenio_logging.datastreams.component_templates
 
 [build_sphinx]
 source-dir = docs/
