improvements and fix tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,16 +57,14 @@ invenio_base.apps =
     invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
     invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
     invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry
-    invenio_logging_datastream = invenio_logging.datastream:InvenioLoggingDatastreams
+    invenio_logging_engine = invenio_logging.logging_engine:InvenioLoggingEngine
 invenio_base.api_apps =
     invenio_logging_console = invenio_logging.console:InvenioLoggingConsole
     invenio_logging_fs = invenio_logging.fs:InvenioLoggingFS
     invenio_logging_sentry = invenio_logging.sentry:InvenioLoggingSentry
-    invenio_logging_datastream = invenio_logging.datastream:InvenioLoggingDatastreams
+    invenio_logging_engine = invenio_logging.logging_engine:InvenioLoggingEngine
 invenio_search.index_templates =
     invenio_logging_datastream = invenio_logging.datastreams.templates
-invenio_logging.datastreams.builders =
-    app = invenio_logging.datastreams.app_logs:AppLogBuilder
 invenio_search.component_templates =
     logging = invenio_logging.datastreams.component_templates
 
